# telegram-bot

./: .gitignore  config.example.toml  config.ini.dist  pyproject.toml
src/: config.py  exceptions.py  main.py  shortcuts.py  states.py
src/core/: exceptions.py
src/filters/: message_length.py
src/handlers/: __init__.py  menu.py  promocodes.py  subscription.py
src/keyboards/: __init__.py  menu.py  payment_menu.py  promocode.py  show_payment_menu.py
src/middlewares/: __init__.py  config.py  dependency_inject.py  server_api_client.py
src/models/: __init__.py  promocodes.py  protocols.py  users.py
src/repositories/: base.py  users.py
src/services/: http_client.py  server_api.py  subscription.py  temp_files.py  users.py
src/views/: __init__.py  base.py  faq.py  instruction.py  menu.py  news_channel.py  payment_menu.py  promocode.py  promocode_activated.py  support.py
tests/: test_message_length_filter.py
tests/test_keyboards/: test_menu.py  test_payment_menu.py  test_show_payment_menu.py
