[tool.poetry]
name = "vobla-vpn-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "vobla_vpn_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
httpx = "^0.23.0"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
